--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -68,17 +68,19 @@
                 android:gravity="end"
                 android:layout_marginBottom="10dp"
                 android:layout_marginRight="20dp"/>
+
             <Button
+                android:id="@+id/btnDangNhap"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Đăng nhập"
-                android:textSize="25dp"
-                android:textAllCaps="false"
-                android:background="@drawable/custom_btn"
-                android:textColor="@color/white"
-                android:padding="15dp"
                 android:layout_margin="10dp"
-                android:id="@+id/btnDangNhap"/>
+                android:background="@drawable/custom_btn"
+                android:padding="15dp"
+                android:text="Đăng nhập"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="20dp" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
