--- a/app/src/main/res/layout/activity_continuebuy_acitivity.xml
+++ b/app/src/main/res/layout/activity_continuebuy_acitivity.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.noth.nothapp.ContinuebuyAcitivity">
+    tools:context="com.noth.nothapp.ContinuebuyAcitivity"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -20,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Giỏ hàng"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:id="@+id/txtGioHang"
@@ -30,19 +33,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="10dp"
-                android:layout_toLeftOf="@id/chat">
+                android:layout_marginEnd="10dp"
+                android:layout_toStartOf="@id/chat">
                 <ImageView
                     android:id="@+id/imgGioHang"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
-                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
                     android:src="@drawable/ic_cart" />
                 <RelativeLayout
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:background="@drawable/custom_cart"
-                    android:layout_marginLeft="20dp">
+                    android:layout_marginStart="20dp">
+
                     <TextView
                         android:id="@+id/txtSoLuongDonHang"
                         android:layout_width="wrap_content"
@@ -51,7 +55,7 @@
                         android:gravity="center_vertical"
                         android:text="0"
                         android:textColor="@color/white"
-                        android:textSize="15dp"
+                        android:textSize="15sp"
                         android:textStyle="bold" />
                 </RelativeLayout>
             </RelativeLayout>
@@ -59,8 +63,8 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_chat"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="10dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp"
                 android:id="@+id/chat"
                 android:layout_centerVertical="true"/>
         </RelativeLayout>
@@ -69,17 +73,18 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="vertical">
+
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:src="@drawable/logo"
-                android:layout_marginTop="40dp"/>
+                android:layout_marginTop="40dp"
+                android:src="@drawable/logo" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Cảm ơn bạn đã đặt hàng !"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:gravity="center_horizontal"/>
@@ -100,7 +105,7 @@
             android:padding="10dp"
             android:text="TIẾP TỤC MUA HÀNG"
             android:textColor="@color/white"
-            android:textSize="17dp"
+            android:textSize="17sp"
             android:textStyle="bold" />
     </RelativeLayout>
-</layout>
+</LinearLayout>
