--- a/app/src/main/res/layout/activity_continuebuy_acitivity.xml
+++ b/app/src/main/res/layout/activity_continuebuy_acitivity.xml
@@ -93,7 +93,7 @@
         <Button
             android:id="@+id/btnTiepTucMuaHang"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="20dp"
@@ -105,7 +105,7 @@
             android:padding="10dp"
             android:text="TIẾP TỤC MUA HÀNG"
             android:textColor="@color/white"
-            android:textSize="17sp"
+            android:textSize="16sp"
             android:textStyle="bold" />
     </RelativeLayout>
 </LinearLayout>
