--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.nothapp.appfuniture.activity.DetailsActivity">
+    tools:context="com.com.noth.nothapp.SigninActivity"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/imgBack"
-            android:layout_width="45dp"
-            android:layout_height="35dp"
-            android:layout_marginTop="10dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_margin="10dp"
             android:src="@drawable/ic_baseline_arrow_back_24" />
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="30dp"
-            android:src="@drawable/setting"
             android:id="@+id/imgsetting"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/setting"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
             android:layout_marginTop="10dp"/>
         <ImageView
             android:layout_width="250dp"
@@ -35,25 +38,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/imgDetails"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:text="Name ghế"
             android:textColor="@color/black"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold" />
         <TextView
+            android:id="@+id/txtMota"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Sản phẩm chất lượng giá rẻ"
             android:layout_below="@id/nameDetails"
-            android:id="@+id/txtMota"
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginStart="10dp"/>
         <LinearLayout
+            android:id="@+id/linear1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:id="@+id/linear1"
+            android:layout_marginStart="10dp"
             android:layout_below="@id/txtMota"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
@@ -69,9 +72,9 @@
                 android:layout_gravity="center_vertical"
                 android:text="5.852.200 vnd"
                 android:textColor="#5051A2"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textStyle="bold"
-                android:layout_marginLeft="5dp"/>
+                android:layout_marginStart="5dp"/>
         </LinearLayout>
 
         <RelativeLayout
@@ -82,21 +85,21 @@
             android:layout_below="@id/linear1"
             android:background="#B3B1B1" />
         <LinearLayout
+            android:id="@+id/linear3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/linear2"
             android:layout_marginTop="10dp"
-            android:id="@+id/linear3"
             android:orientation="horizontal">
             <RatingBar
+                android:id="@+id/rating"
                 style="?android:attr/ratingBarStyleIndicator"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:rating="5"
                 android:scaleX=".7"
                 android:scaleY=".7"
-                android:id="@+id/rating"
                 android:transformPivotX="0dp"
                 android:transformPivotY="0dp" />
             <TextView
@@ -104,26 +107,26 @@
                 android:layout_height="wrap_content"
                 android:text="5.0"
                 android:layout_gravity="center_vertical"
-                android:textSize="16dp"/>
+                android:textSize="16sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="|"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_gravity="center_vertical"
-                android:textSize="16dp"/>
+                android:textSize="16sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Đã bán 500"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_gravity="center_vertical"
-                android:textSize="16dp"/>
+                android:textSize="16sp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
             android:orientation="horizontal"
             android:layout_below="@id/linear3">
@@ -133,33 +136,33 @@
                 android:text="Số lượng"
                 android:layout_marginTop="15dp"
                 android:textStyle="bold"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textColor="@color/black"/>
             <LinearLayout
-                android:layout_width="130dp"
+                android:layout_width="100dp"
                 android:padding="10dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/custom_linear_sl"
                 android:orientation="horizontal">
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:src="@drawable/ic_baseline_horizontal_rule_24"
                     android:id="@+id/btnTru"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="1"
-                    android:textSize="25dp"
+                    android:textSize="20sp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:id="@+id/txtNumber"/>
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:src="@drawable/ic_baseline_add_24"
                     android:id="@+id/btnCong"/>
             </LinearLayout>
@@ -175,15 +178,15 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:layout_gravity="center_horizontal"
                     android:src="@drawable/ic_chat"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Chat ngay"
-                    android:textSize="15dp"
+                    android:text="CHAT NGAY"
+                    android:textSize="15sp"
                     android:layout_marginBottom="5dp"
                     android:gravity="center_horizontal"
                     android:textColor="@color/black"/>
@@ -194,8 +197,8 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:layout_gravity="center_horizontal"
                     android:src="@drawable/ic_cart"/>
                 <TextView
@@ -203,7 +206,7 @@
                     android:layout_height="wrap_content"
                     android:text="Thêm vào giỏ"
                     android:gravity="center_horizontal"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
                     android:layout_marginBottom="5dp"
                     android:textColor="@color/black"/>
             </LinearLayout>
@@ -217,8 +220,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Mua ngay"
-                    android:textSize="22dp"
+                    android:text="MUA NGAY"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_gravity="center"
                     android:gravity="center"
@@ -226,4 +229,4 @@
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
-</layout>
+</LinearLayout>
