--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -16,9 +16,9 @@
             android:layout_height="wrap_content">
             <ImageView
                 android:id="@+id/imgBack"
-                android:layout_width="40dp"
-                android:layout_height="35dp"
-                android:layout_marginTop="10dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_margin="8dp"
                 android:layout_centerVertical="true"
                 android:src="@drawable/ic_baseline_arrow_back_24" />
             <androidx.appcompat.widget.SearchView
@@ -39,9 +39,10 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/custom_btn">
+
                 <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:layout_centerInParent="true"
                     android:src="@drawable/set" />
             </RelativeLayout>
