--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -22,64 +22,66 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Đăng nhập"
-                    android:textSize="25sp"
+                    android:textSize="20sp"
                     android:textColor="@color/black"
                     android:textStyle="bold"/>
 
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="30dp"
+                    android:layout_height="24dp"
                     android:layout_centerHorizontal="true"
                     android:layout_gravity="center_horizontal"
                     android:src="@drawable/user" />
             </RelativeLayout>
             <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:src="@drawable/logo"
                 android:layout_marginTop="40dp"
                 android:layout_gravity="center"/>
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_margin="10dp"
                 android:inputType="number"
                 android:hint="Nhập số điện thoại"
                 android:background="@drawable/custom_editext"
-                android:textSize="20sp"
+                android:textSize="14sp"
+                android:textStyle="bold"
                 android:textColor="@color/black"
                 android:id="@+id/edtPhone"
                 android:padding="15dp"/>
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_margin="10dp"
                 android:hint="Nhập mật khẩu"
                 android:inputType="textPassword"
                 android:textColor="@color/black"
                 android:id="@+id/edtPassword"
                 android:background="@drawable/custom_editext"
-                android:textSize="20sp"
+                android:textSize="14sp"
+                android:textStyle="bold"
                 android:padding="15dp"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Quên mật khẩu ?"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textColor="@color/black"
                 android:gravity="end"
                 android:layout_marginBottom="10dp"
                 android:layout_marginEnd="20dp"/>
             <Button
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:text="Đăng nhập"
-                android:textSize="25sp"
+                android:textStyle="bold"
+                android:textSize="16sp"
                 android:textAllCaps="false"
                 android:background="@drawable/custom_btn"
                 android:textColor="@color/white"
-                android:padding="15dp"
                 android:layout_margin="10dp"
                 android:id="@+id/btnDangNhap"/>
             <LinearLayout
@@ -98,7 +100,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Hoặc"
-                    android:textSize="17sp"
+                    android:textSize="16sp"
                     android:gravity="center_horizontal"
                     android:layout_weight="1"/>
                 <RelativeLayout
@@ -158,7 +160,7 @@
                 android:layout_height="wrap_content"
                 android:text="Đăng ký tài khoản ?"
                 android:gravity="center_horizontal"
-                android:textSize="17sp"
+                android:textSize="16sp"
                 android:id="@+id/txtDangKy"
                 android:textColor="@color/black"
                 android:layout_marginTop="20dp"
