--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -128,6 +128,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"/>
             <ImageView
+                android:id="@+id/imv_ToFacebook"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:src="@drawable/ic_baseline_message_24"
