add onclicklistener event on messageIcon in Cart xml

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -43,6 +43,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
             <ImageView
+                android:id="@+id/imv_ToFacebook"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_chat"
