--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -178,6 +178,7 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
                 <ImageView
+                    android:id="@+id/imv_ToFacebook"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     android:layout_gravity="center_horizontal"
