--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -10,6 +10,13 @@
         android:orientation="horizontal"
         android:layout_margin="10dp"
         android:background="#EAEAEA">
+        <CheckBox
+            android:id="@+id/check_GioHang"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:buttonTint="#5051A2"
+            android:layout_gravity="center"
+            />
         <androidx.cardview.widget.CardView
             android:layout_width="120dp"
             android:layout_height="120dp"
