--- a/app/src/main/res/layout/activity_continuebuy.xml
+++ b/app/src/main/res/layout/activity_continuebuy.xml
@@ -13,6 +13,12 @@
             android:layout_width="match_parent"
             android:layout_marginBottom="20dp"
             android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/imgBack"
+                android:layout_width="45dp"
+                android:layout_height="35dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_baseline_arrow_back_24" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
