--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -240,12 +240,12 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:text="TIẾP TỤC"
+                android:text="HOÀN THÀNH"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:background="@drawable/custom_btn"
                 android:textColor="@color/white"
-                android:layout_margin="10dp"
+                android:layout_marginBottom="20dp"
                 android:id="@+id/btnTiepTuc"/>
         </LinearLayout>
     </ScrollView>
