--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"
             android:buttonTint="#5051A2"
             android:layout_gravity="center"
+            android:checked="true"
             />
         <androidx.cardview.widget.CardView
             android:layout_width="120dp"
@@ -50,18 +51,18 @@
                 android:layout_marginBottom="10dp"
                 android:orientation="horizontal">
                 <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
                     android:layout_gravity="center_vertical"
-                    android:src="@drawable/ic_baseline_visibility_24"/>
+                    android:src="@drawable/ic_baseline_attach_money_24"/>
                 <TextView
                     android:id="@+id/txtMoneyPopular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="5.852.200 vnd"
+                    android:text="5.852.200 VNĐ"
                     android:textColor="#5051A2"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:textStyle="bold"
                     android:layout_marginStart="5dp"/>
             </LinearLayout>
