--- a/app/src/main/res/layout/activity_reset_pass.xml
+++ b/app/src/main/res/layout/activity_reset_pass.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditUserAcitivity"
-    android:padding="10dp"
-    android:orientation="vertical">
+    tools:context="com.noth.nothapp.ResetPassActivity"
+    android:orientation="vertical"
+    android:padding="10dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,7 +18,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hồ sơ tài khoản"
+            android:text="Đổi mật khẩu"
             android:textSize="24sp"
             android:textStyle="bold"
             android:textColor="#000000"
@@ -32,7 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/custom_editext"
-                android:hint="Nhập họ tên"
+                android:hint="Nhập mật khẩu cũ"
                 android:textSize="20dp"
                 android:padding="15dp"
                 android:layout_marginTop="40sp"
@@ -42,7 +42,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/custom_editext"
-                android:hint="Nhập Email"
+                android:hint="Nhập mật khẩu mới"
                 android:textSize="20dp"
                 android:padding="15dp"
                 android:layout_marginTop="10sp"
@@ -52,7 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/custom_editext"
-                android:hint="Nhập số điện thoại"
+                android:hint="Xác nhận mật khẩu mới"
                 android:textSize="20dp"
                 android:padding="15dp"
                 android:layout_marginTop="10sp"
