--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.noth.nothapp.ResetPassActivity"
+    tools:context="com.noth.nothapp.ForgotPasswordActivity"
     android:orientation="vertical"
     android:padding="10dp">
     <LinearLayout
@@ -19,27 +19,17 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Đổi mật khẩu"
+            android:text="Đặt mật khẩu mới"
             android:textSize="24sp"
             android:textStyle="bold"
             android:textColor="#000000"
             android:layout_marginStart="15sp"
+            android:gravity="center"
             android:paddingTop="10dp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/custom_editext"
-                android:hint="Nhập mật khẩu cũ"
-                android:inputType="textPassword"
-                android:textSize="20dp"
-                android:padding="15dp"
-                android:layout_marginTop="40sp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"/>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
