--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -65,6 +65,7 @@
                 android:textStyle="bold"
                 android:padding="15dp"/>
             <TextView
+                android:id="@+id/tv_ForgotPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Quên mật khẩu ?"
