--- a/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/src/main/res/layout/activity_edit_user.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <ImageView
+            android:id="@+id/imv_BackToLoginScreen"
             android:layout_width="40dp"
             android:layout_height="35dp"
             android:src="@drawable/ic_baseline_arrow_back_24"/>
@@ -60,6 +61,7 @@
                 android:layout_marginEnd="10dp"/>
         </LinearLayout>
         <Button
+            android:id="@+id/btn_ConfirmChangeInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Xác nhận"
