--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -148,6 +148,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"/>
             <ImageView
+                android:id="@+id/imv_NavbarUser"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:src="@drawable/ic_baseline_person_pin_24"
