--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -20,7 +20,8 @@
             android:src="@drawable/ic_baseline_arrow_back_24" />
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            >
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="30dp"
@@ -29,13 +30,14 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Username"
+                android:text="denjivippro2022"
                 android:textStyle="bold"
                 android:textSize="26sp"
                 android:textColor="#000000"
                 android:layout_marginTop="10sp"/>
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/ll_ChinhSuaHoSo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -55,6 +57,7 @@
                 android:layout_marginStart="20dp"/>
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/ll_ChangePassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
