--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -77,6 +77,7 @@
                 android:layout_marginStart="20dp"/>
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/ll_AddressBook"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -96,6 +97,7 @@
                 android:layout_marginStart="20dp"/>
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/ll_CheckOrders"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -115,6 +117,7 @@
                 android:layout_marginStart="20dp"/>
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/ll_PaymentMethod"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
