--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -136,5 +136,25 @@
                 android:src="@drawable/ic_baseline_arrow_forward_24"
                 android:layout_marginStart="20dp"/>
         </LinearLayout>
+        <LinearLayout
+            android:id="@+id/ll_LogOut"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@drawable/custom_editext"
+            android:padding="10dp"
+            android:layout_marginTop="10dp">
+            <TextView
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:text="Đăng xuất"
+                android:textSize="20dp"
+                android:textColor="@color/black"/>
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@drawable/ic_baseline_arrow_forward_24"
+                android:layout_marginStart="20dp"/>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
